Reduce memory requirements for ctobssim.
The memory needs for ctobssim have been reduced by first working on a local copy of the CTA observation (this de-allocates properly and memory cache associated to the response functions), and by saving and disposing the event lists immediately if called using the execute() method (this is the method called when the tool is run from the command line).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2014-10-17  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2014-10-24  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.8.0 released
         ========================
@@ -17,6 +17,7 @@
         Support energy dispersion in ctobssim, ctlike and ctmodel	
         Correct ctobssim for thread safety
         Correctly apply time references in ctselect
+        Reduce memory usage
         Move obsutils to ctools namespace
         Add several functions to obsutils
         Enhance documentation
