--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu)
 Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr)
 Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)
-Michael Mayer (michael.mayer@desy.de)
+Michael Mayer (michael.mayer@physik.hu-berlin.de)
 Chia-Chun Lu (Chia-Chun.Lu@mpi-hd.mpg.de)
