--- a/examples/README
+++ b/examples/README
@@ -1,6 +1,10 @@
 This folder contains Python example scripts that illustrate the
 usage of the ctools.
 
+pipeline_stacked_mem.py
+  Example pipeline for simulating events and performing a stacked
+  analysis in memory. No files will be written to disk.
+
 make_binned_analysis.py
   Example Python pipelines for binned analysis.
   The first pipeline writes intermediate results to the disk while
