--- a/examples/README
+++ b/examples/README
@@ -4,9 +4,20 @@ usage of the ctools.
 benchmark_cta_analysis.py
   Performs performance benchmarks of the various CTA analysis types.
 
+pipeline_binned_mem.py
+  Example pipeline for simulating events and performing a binned
+  analysis in memory. No files will be written to disk.
+
 pipeline_stacked_mem.py
   Example pipeline for simulating events and performing a stacked
   analysis in memory. No files will be written to disk.
+
+pipeline_unbinned_mem.py
+  Example pipeline for simulating events and performing an unbinned
+  analysis in memory. No files will be written to disk.
+
+
+
 
 make_binned_analysis.py
   Example Python pipelines for binned analysis.
