Add disk analysis pipelines.

--- a/examples/README
+++ b/examples/README
@@ -4,13 +4,25 @@ usage of the ctools.
 benchmark_cta_analysis.py
   Performs performance benchmarks of the various CTA analysis types.
 
+pipeline_binned_disk.py
+  Example pipeline for simulating events and performing a binned
+  analysis by saving intermediate results to disk.
+
 pipeline_binned_mem.py
   Example pipeline for simulating events and performing a binned
   analysis in memory. No files will be written to disk.
 
+pipeline_stacked_disk.py
+  Example pipeline for simulating events and performing a stacked
+  analysis by saving intermediate results to disk.
+
 pipeline_stacked_mem.py
   Example pipeline for simulating events and performing a stacked
   analysis in memory. No files will be written to disk.
+
+pipeline_unbinned_disk.py
+  Example pipeline for simulating events and performing an unbinned
+  analysis by saving intermediate results to disk.
 
 pipeline_unbinned_mem.py
   Example pipeline for simulating events and performing an unbinned
