Integrate code and update documentation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-2015-02-02  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-02-16  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.0.0 released
         ========================
 
         Adapt to GammaLib 1.0.0 interface
         Do not import automatically Python scripts
+        Support INDEF/NONE/UNDEF/UNDEFINED parameters in ctselect
 
 
 2015-01-08  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
