Use input model for sensitivity computation and simplify the parameter interface (#1426)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2015-02-16  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-02-20  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.0.0 released
         ========================
@@ -6,6 +6,7 @@
         Adapt to GammaLib 1.0.0 interface
         Do not import automatically Python scripts
         Support INDEF/NONE/UNDEF/UNDEFINED parameters in ctselect
+        Modify cssens parameter interface (#1426)
 
 
 2015-01-08  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
