--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2015-03-12  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-03-28  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.0.0 released
         ========================
@@ -10,6 +10,7 @@
         Add csobsdef script (#1429)
         Add ctulimit tool (#1363)
         Allow ctmodel usage for stacked analysis from command line
+        Correct rate check in ctobssim for map cubes (#1452)
 
 
 2015-01-08  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
