--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ New Features and Important Changes in ctools 1.0.0
 
 Author(s) : Juergen Knoedlseder
 
-23 February 2015
+28 March 2015
 
 
 1. Introduction
@@ -49,12 +49,14 @@ None
 
 8. ctlike - Maximum likelihood fitting
 --------------------------------------
-None
+The bkgcube parameter has been added to allow specification of a background
+cube for stacked analysis.
 
 
 9. cttsmap - Generation of Test Statistics map
 ----------------------------------------------
-None
+The bkgcube parameter has been added to allow specification of a background
+cube for stacked analysis.
 
 
 10. ctskymap - CTA sky mapping
@@ -64,7 +66,8 @@ None
 
 11. ctmodel - CTA counts cube modelling
 ---------------------------------------
-None
+The bkgcube parameter has been added to allow specification of a background
+cube for stacked analysis.
 
 
 12. ctexpcube - CTA exposure cube generation
@@ -89,12 +92,16 @@ None
 
 16. ctbutterfly - Generate butterfly diagrams
 ---------------------------------------------
-None
+The bkgcube parameter has been added to allow specification of a background
+cube for stacked analysis.
 
 
 17. ctulimit - Compute upper limit
 ----------------------------------
 Added an initial version of the upper limit computation tool.
+
+The bkgcube parameter has been added to allow specification of a background
+cube for stacked analysis.
 
 
 18. Examples
